--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
-  "name": "blog",
+  "homepage": "https://blog.smileyik.tk",
+  "name": "smile-yik-blog",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^3.2.3",
+    "highlight.js": "^11.4.0",
+    "jquery": "^3.6.0",
+    "marked": "^4.0.12",
+    "mathjax": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-mathjax3": "^0.0.3",
+    "react-router-dom": "^6.2.2",
+    "react-router-native": "^6.2.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
