--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "jquery": "^3.6.0",
     "marked": "^4.0.12",
     "mathjax": "^3.2.0",
+    "mathjax3-react": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-mathjax3": "^0.0.3",
     "react-router-dom": "^6.2.2",
     "react-router-native": "^6.2.2",
     "react-scripts": "5.0.0",
