--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
     "customize-cra": "^1.0.0",
+    "easymde": "^2.16.1",
     "highlight.js": "^11.4.0",
     "jquery": "^3.6.0",
     "marked": "^4.0.12",
@@ -18,6 +19,7 @@
     "react-router-dom": "^6.2.2",
     "react-router-native": "^6.2.2",
     "react-scripts": "5.0.1",
+    "react-simplemde-editor": "^5.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
