--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-native": "^6.2.2",
     "react-scripts": "5.0.1",
     "react-simplemde-editor": "^5.0.2",
+    "update-browserslist-db": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
